Accept timestamp for bookmarks and current page update
