# src/BymseRead.Core/Application/AddLastPageBookmark/AddLastPageBookmarkRequest.cs
@@ -3,4 +3,5 @@ namespace BymseRead.Core.Application.AddLastPageBookmark;
 public class AddLastPageBookmarkRequest
 {
     public required int Page { get; init; }
+    public required DateTimeOffset ChangedAt { get; init; }
 }
